webapp/channels/src/sass/components/_files.scss
@use "utils/functions";
@use "utils/mixins";
@use "utils/variables";
.post--right1:has(.post-image__column):not(:has(.DataSpillageReport.mode_short)),
.post--left1:has(.post-image__column):not(:has(.DataSpillageReport.mode_short)) {
    width:350px;
    min-width: 204px;
    max-width: 100%;
}
.post--right1:has(.audio-player1),
.post--left1:has(.audio-player1) {
.post-image__column{
  width: auto;
  min-width:auto;
}}
.post--left1:has(.audio-player1) {
.post-image__column{
    direction: ltr;
}
}
.file-preview__container {
    position: relative;
    display: flex;
    width: 100%;
    height: 8rem;
    flex-shrink: 0;
    flex-wrap: nowrap;
    align-items: center;
    padding-inline-start: 8px;
    margin: 0;
    overflow-x: auto;
    overflow-y: hidden;
    white-space: nowrap;
    border-top: var(--border-default);
}

.file-preview {
    @include mixins.clearfix;

    position: relative;
    display: inline-block;
    width: 120px;
    height: 100px;
    flex-shrink: 0;
    flex-wrap: nowrap;
    border: 1px solid variables.$light-gray;
    margin-inline-end: 10px;

    .spinner {
        position: absolute;
        top: 50%;
        inset-inline-start:50%;
        width: 32px;
        height: 32px;
        margin-top: -16px;
        margin-inline-start: -16px;
    }
}

.app__body {
    .file-preview__remove {
        position: absolute;
        top: 4px;
        inset-inline-end: 4px;
        display: flex;
        width: 2.8rem;
        height: 2.8rem;
        align-items: center;
        justify-content: center;
        border-radius: 4px;
        color: rgba(functions.v(center-channel-color-rgb), 0.75);
        font-size: 1.4rem;
        text-align: center;
        text-decoration: none;

        &:focus {
            color: rgba(functions.v(center-channel-color-rgb), 0.75);
        }

        &:hover {
            background: rgba(functions.v(center-channel-color-rgb), 0.08);
            color: rgba(functions.v(center-channel-color-rgb), 0.75);
        }

        &:active {
            background: rgba(var(--button-bg-rgb), 0.08);
            color: functions.v(button-bg);
        }
    }
}

.image-comment {
    width: 300px;
    height: 300px;
    background-position: left top;
    background-repeat: no-repeat;
}

.file-icon {
    width: 100%;
    height: 100%;

    &.text {
        @include mixins.file-icon('../images/icons/text.svg');
    }

    &.audio {
        @include mixins.file-icon('../images/icons/audio.svg');
    }

    &.video {
        @include mixins.file-icon('../images/icons/video.svg');
    }

    &.ppt {
        @include mixins.file-icon('../images/icons/ppt.svg');
    }

    &.generic,
    &.other {
        @include mixins.file-icon('../images/icons/generic.svg');
    }

    &.code {
        @include mixins.file-icon('../images/icons/code.svg');
    }

    &.excel {
        @include mixins.file-icon('../images/icons/excel.svg');
    }

    &.word {
        @include mixins.file-icon('../images/icons/word.svg');
    }

    &.pdf {
        @include mixins.file-icon('../images/icons/pdf.svg');
    }

    &.patch {
        @include mixins.file-icon('../images/icons/patch.svg');
    }

    &.image {
        @include mixins.file-icon('../images/icons/image.svg');
    }
}

.pdf-preview-spacer {
    height: 5px;
}

.pdf-max-pages {
    position: relative;
    bottom: 8px;
    inset-inline-start:0;
    display: block;
    width: 100%;
}

.pdf-download-btn-spacer {
    margin-inline-end: 4px;
}
/* ... */

